<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="app_name">Block 1212</string>
    <string name="btn_continue">Continue</string>
    <string name="new_game">New Game</string>
    <string name="rate_app">Rate this app</string>
    <string name="share">Share</string>
    <string name="best_score">Best Score</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play Again ?</string>
    <string name="score">Score</string>
    <string name="best">Best</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="insane">Insane</string>
    <string name="mode">Mode</string>


    <string name="settings_color_alpha">Color Alpha</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_bgm">Music</string>
    <string name="settings_on">On</string>
    <string name="settings_off">Off</string>

    <string name="quit_msg">Quit the Game ?</string>
    <string name="share_msg">"Share an app for you."</string>
</resources>
