<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_home_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32sp"/>

        <Button
            android:id="@+id/btn_easy"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"/>

        <Button
            android:id="@+id/btn_normal"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal"/>

        <Button
            android:id="@+id/btn_hard"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard"/>

        <Button
            android:id="@+id/btn_insane"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insane"/>

        <Button
            android:id="@+id/btn_best_score"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/best_score"/>

        <Button
            android:id="@+id/btn_settings"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>

        <Button
            android:id="@+id/btn_quit"
            style="@style/HomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit"/>
    </LinearLayout>

    <!--<include layout="@layout/layout_ads"/>-->
</RelativeLayout>
