<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/best_score"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <TableRow android:gravity="center">

            <TextView
                style="@style/BestScoreDialogLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/easy"/>

            <TextView
                android:id="@+id/easy_score"
                style="@style/BestScoreDialogValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                style="@style/BestScoreDialogLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/normal"/>

            <TextView
                android:id="@+id/normal_score"
                style="@style/BestScoreDialogValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                style="@style/BestScoreDialogLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/hard"/>

            <TextView
                android:id="@+id/hard_score"
                style="@style/BestScoreDialogValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                style="@style/BestScoreDialogLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/insane"/>

            <TextView
                android:id="@+id/insane_score"
                style="@style/BestScoreDialogValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>


    <Button
        android:id="@+id/dialog_btn_ok"
        android:layout_width="@dimen/dialog_btn_width"
        android:layout_height="@dimen/dialog_btn_height"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_btn_bg"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dialog_btn_size_16sp"/>


</LinearLayout>

