<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/game_over"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/play_again"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dialog_msg_size_24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_btn_cancel"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/dialog_btn_bg"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_btn_size_16sp"/>

        <Button
            android:id="@+id/dialog_btn_ok"
            android:layout_width="@dimen/dialog_btn_width"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/dialog_btn_bg"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_btn_size_16sp"/>
    </LinearLayout>


</LinearLayout>

