<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_settings_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/settings"
        android:textColor="@android:color/white"
        android:textSize="32sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_sound"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/settings_sound"/>

            <TextView
                android:id="@+id/tv_sound"
                style="@style/SettingsValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_music"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_item_height">

            <TextView
                style="@style/SettingsLabel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/settings_bgm"/>

            <TextView
                android:id="@+id/tv_music"
                style="@style/SettingsValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/dialog_btn_ok"
        android:layout_width="@dimen/dialog_btn_width"
        android:layout_height="@dimen/dialog_btn_height"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/dialog_btn_bg"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:padding="5dp"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dialog_btn_size_16sp"/>


</LinearLayout>

