<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/activity_home_bg"
    android:gravity="center"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_3dp"
        android:background="@drawable/home_btn_bg"
        android:text="@string/continue_label"
        android:textColor="@color/white"
        android:textSize="@dimen/home_text_size_big"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_3dp"
        android:background="@drawable/home_btn_bg"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:textSize="@dimen/home_text_size_big"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/btn_best_score"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_3dp"
        android:background="@drawable/home_btn_bg"
        android:text="@string/best_score"
        android:textColor="#ffffff"
        android:textSize="@dimen/home_text_size_big"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_3dp"
        android:background="@drawable/home_btn_bg"
        android:text="@string/quit"
        android:textColor="#ffffff"
        android:textSize="@dimen/home_text_size_big"
        android:textStyle="bold"/>


</LinearLayout>
